Wrap fix

--- a/frontend/assets/styles/app.scss
+++ b/frontend/assets/styles/app.scss
@@ -189,6 +189,7 @@ footer {
         text-align: center;
         justify-content: center;
         margin: 0 -5px;
+        flex-wrap: wrap;
 
         .banner-wrapper, img, iframe {
             width: 280px;
